--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "article",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8000",
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "@craco/craco": "^6.4.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -11,20 +14,27 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "antd": "^4.20.3",
+    "axios": "^0.27.2",
     "craco-less": "^2.0.0",
+    "draft-js": "^0.11.7",
     "history": "^5.3.0",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
+    "limit-date-ant": "^1.0.1",
+    "lodash": "^4.17.21",
+    "mockinlocal": "^1.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yarn": "^1.22.18"
   },
   "scripts": {
     "start": "craco  start",
-    "build": "craco  build"
+    "build": "craco  build",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -43,5 +53,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/draft-js": "^0.11.9",
+    "@types/lodash": "^4.14.182",
+    "@types/markdown-it": "^12.2.3"
   }
 }
